--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-graphql": "^0.12.0",
     "express-validator": "^6.14.0",
     "formidable": "^2.0.1",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
