--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formidable": "^2.0.1",
     "graphql": "^15.8.0",
     "helmet": "^5.0.2",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
