--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1"
   }
