--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.76.0",
+    "aws-sdk": "^2.1120.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
@@ -27,7 +29,9 @@
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "nodemailer": "^6.7.3",
+    "nodemailer-sendcloud-transport": "^0.0.2",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2"
   }
 }
