--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "express-graphql": "^0.12.0",
     "express-validator": "^6.14.0",
     "formidable": "^2.0.1",
