--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-ses": "^3.76.0",
-    "aws-sdk": "^2.1120.0",
+    "aws-sdk": "^2.1131.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
@@ -28,6 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.3",
     "nodemailer-sendcloud-transport": "^0.0.2",
     "nodemon": "^2.0.15",
