--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ PORT=8000
 MONGODB_KEY=mongodb+srv://office-admin:admin123456@cluster0.xcjno.mongodb.net/officeChatDatabase
 
 AWS_ACCESS_KEYID=AKIAYEZ2SCIMCPEPOP7Z
-AWS_SECRET_ACCESS_KEY=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
+AWS_SECRET_ACCESS_KEY=R838lSMO8uPqSXz7SDvraVql8rhFCdY2BZ+I544
+REGION=us-east-1
