--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --watch",
-    "start": "nodemon app.js"
+    "start": "nodemon dist/app.js"
   },
   "keywords": [],
   "author": "",
