company model converted to typescript

--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0"
   }
 }
