company controller converted to typescript

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/nodemailer": "^6.4.4"
   }
 }
