--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.76.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.34",
     "aws-sdk": "^2.1131.0",
     "bcrypt": "^5.0.1",
