--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-ses": "^3.76.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
+    "@types/method-override": "^0.0.32",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.34",
     "aws-sdk": "^2.1131.0",
@@ -31,6 +32,7 @@
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
