--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --watch",
-    "start": "nodemon dist/server.js"
+    "start": "nodemon dist/server.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
   },
   "keywords": [],
   "author": "",
@@ -39,7 +40,6 @@
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.3",
     "nodemailer-sendcloud-transport": "^0.0.2",
-    "nodemon": "^2.0.15",
     "pm2": "^5.2.0",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
@@ -47,6 +47,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/nodemailer": "^6.4.4"
+    "@types/nodemailer": "^6.4.4",
+    "concurrently": "^7.2.1",
+    "nodemon": "^2.0.16"
   }
 }
