--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --watch",
-    "start": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
+    "start": "nodemon dist/server.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
   },
   "keywords": [],
   "author": "",
