--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.3",
     "nodemailer-sendcloud-transport": "^0.0.2",
+    "nodemon": "^2.0.16",
     "pm2": "^5.2.0",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
@@ -48,7 +49,6 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemailer": "^6.4.4",
-    "concurrently": "^7.2.1",
-    "nodemon": "^2.0.16"
+    "concurrently": "^7.2.1"
   }
 }
